--- a/trial.html
+++ b/trial.html
@@ -1,46 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Happy birthday project</title>
-  
-  <link rel="stylesheet" href="trial.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<div class="body">
- <div class="birthdayCard">
-<div class="cardFront"><h3 class="happy">HAPPY BIRTHDAY!DEAR</h3>
-<div class="balloons">
-  <div class="balloonOne"></div>
-  <div class="balloonTwo"></div>
-  <div class="balloonThree"></div>
-  <div class="balloonFour"></div>
-</div>
-</div>
-<div class="cardInside">
-    <h3 class="back">HAPPY BIRTHDAY!</h3>
-    <p contenteditable="true">Dear best friend,</p> 
-    <p contenteditable="true">Happy birthday!! I hope your day is filled with lots of love and laughter! May all of your birthday wishes come true.</p>
-    <p contenteditable="true" class="name">Sagar</p>
-  </div>
-</div>
-</div>
-<script>
-    function checkScreenWidth() {
-        if (window.innerWidth >= 1120) { // Adjust the pixel value as needed
-            window.location.href = 'index.html';
-        }
-    }
-    
-    // Check screen width on window resize
-    window.addEventListener('resize', checkScreenWidth);
-    
-    // Initial check on page load
-    document.addEventListener('DOMContentLoaded', checkScreenWidth);
-</script>
+    <audio id="background-music">
+        <source src="./happy-birthday-to-you-dance-20919.mp3" type="audio/mpeg">
+
+        Your browser does not support the audio element.
+    </audio>
+    <div class="container">
+        <div class="card">
+            <div class="outside">
+                <h1>Happy Birthday</h1>
+                <h3>My dear best friend,may god bless you with abundant joy on your birthday and always!<br>
+                    Thank you for always being by my side and having my back.</h3>
+            </div>
+            <div class="inside">
+                <img src="cakegif.gif" />
+                <h3>Sending you an infinite amount of love, joy, and happiness on your birthday!
+                </h3>
+            </div>
+        </div>
+
+        <div class="block">
+            <div class="frames frame1">
+                <img src="img1.png" alt="">
+                <p>Keep smiling,Keep shining</p>
+            </div>
+            <div class="frames frame2">
+                <img src="img2.png" alt="">
+                <p>On this occasion bring you lot of happiness and success
+                </p>
+            </div>
+            <div class="frames frame3">
+                <img src="img3.png" alt="">
+                <p>May God bless you on your birthday, and always</p>
+            </div>
+        </div>
+
+    </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', (event) => {
+            var audio = document.getElementById('background-music');
+            var pauseTimeout;
+
+            var cards = document.querySelectorAll('.card');
+            cards.forEach(function(card) {
+                card.addEventListener('mouseover', function() {
+                    clearTimeout(pauseTimeout); // Clear any pending timeouts
+                    audio.play();
+                });
+
+                card.addEventListener('mouseleave', function() {
+                    pauseTimeout = setTimeout(function() {
+                        audio.pause();
+                        audio.currentTime = 0; // Reset audio to start
+                    }, 10000); // Pause after 5 seconds
+                });
+            });
+        });
+    </script>
+    <script src="trial.js"></script>
 </body>
+
 </html>
