--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 <div class="body">
  <div class="birthdayCard">
-<div class="cardFront"><h3 class="happy">HAPPY BIRTHDAY!DEAR</h3>
+<div class="cardFront"><h3 class="happy">Happy Birthday Dear Rajashri!!</h3>
 <div class="balloons">
   <div class="balloonOne"></div>
   <div class="balloonTwo"></div>
@@ -35,8 +35,10 @@
 </div>
 <div class="cardInside">
     <h3 class="back">HAPPY BIRTHDAY!</h3>
-    <p contenteditable="true">Dear best friend,</p> 
-    <p contenteditable="true">Happy birthday!! I hope your day is filled with lots of love and laughter! May all of your birthday wishes come true.</p>
+    <p contenteditable="false">Dear friend,</p> 
+    <p contenteditable="false">Happy birthday!! I hope your day is filled with lots of love and laughter!
+      You've really become a close friend of mine in this few months, our paths may differ after college but meeting you was the best co-incidence ever happened to me. I wish this friendly bond remain intact in near futures.
+    </p>
     <p contenteditable="true" class="name">Sagar</p>
   </div>
 </div>
