--- a/trial.html
+++ b/trial.html
@@ -20,8 +20,9 @@
         <div class="card">
             <div class="outside">
                 <h1>Happy Birthday</h1>
-                <h3>My dear best friend,may god bless you with abundant joy on your birthday and always!<br>
-                    Thank you for always being by my side and having my back.</h3>
+                <h3>I hope your day is filled with lots of love and laughter!
+                    You've really become a close friend of mine in this few months. Though our paths may differ after college but meeting
+                    you was the best co-incidence ever happened to me. I wish this friendly bond remain intact in near futures.💞💞</h3>
             </div>
             <div class="inside">
                 <img src="cakegif.gif" />
@@ -32,16 +33,16 @@
 
         <div class="block">
             <div class="frames frame1">
-                <img src="img1.png" alt="">
+                <img src="image.png" alt="">
                 <p>Keep smiling,Keep shining</p>
             </div>
             <div class="frames frame2">
-                <img src="img2.png" alt="">
+                <img src="ss3.png" alt="">
                 <p>On this occasion bring you lot of happiness and success
                 </p>
             </div>
             <div class="frames frame3">
-                <img src="img3.png" alt="">
+                <img src="ss2.png" alt="">
                 <p>May God bless you on your birthday, and always</p>
             </div>
         </div>
