--- a/trial.html
+++ b/trial.html
@@ -21,8 +21,7 @@
             <div class="outside">
                 <h1>Happy Birthday</h1>
                 <h3>I hope your day is filled with lots of love and laughter!
-                    You've really become a close friend of mine in this few months. Though our paths may differ after college but meeting
-                    you was the best co-incidence ever happened to me. I wish this friendly bond remain intact in near futures.💞💞</h3>
+                    You've really become a close friend of mine in this few months. Already feeling sad that we won't be able to meet after few months. Huhh that's all about growing up🥹.Never imagined I have to wait for exams eagerly to meet someone...</h3>
             </div>
             <div class="inside">
                 <img src="cakegif.gif" />
