--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Happy birthday project</title>
+  <title>Happy birthday</title>
   <script>
     function checkScreenWidth() {
       if (window.innerWidth >= 1120) { // Adjust the pixel value as needed
